# micro-vqgan

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: celebahq.yaml
src/micro_vqgan/: __main__.py  callbacks.py  data.py  lit.py  model.py
