[project]
name = "micro-vqgan"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "jsonargparse[signatures]>=4.47.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchmetrics[image]>=1.9.0",
    "torchvision>=0.26.0",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
